# nepal-compliance

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  _typos.toml  api.py  bs_customcode.js  commitlint.config.ts  compose.yaml  custom_field.py  hooks.py  inastall.py  install.py  note.txt  package-lock.json  package.json  pyproject.toml  setup.py  uninstalll.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  config.yml
.github/workflows/: codeql.yml  docker-build-push.yml  large-pr-labeler.yml  pr-size-check.yml  semgrep-rules.yml  stale.yml
custom_code/leave_type/: leave_type.py
docs/: docker-install.md  manual-install.md
nepal_compliance/: __init__.py  backdated_doctype_restriction.py  boot.py  cbms_api.py  custom_field.py  email_utils.py  hooks.py  install.py  modules.txt  nepali_num2words.py  patches.txt  qr_code.py  uninstall.py  uninstalll.py  utils.py
nepal_compliance/api/: api.py  employee_benefit_claim.py  test_employee_benefit_claim.py
nepal_compliance/custom_code/: print_settings.py
nepal_compliance/fixtures/: custom_field.json  salary_component.json
nepal_compliance/nepali_date_utils/: __init__.py  nepali_date.py  patch.py  utils.py
nepal_compliance/overrides/: custom_sales_invoice.py  employee_benefit_claim.py  item.py  salary_slip.py  salary_structure.py
nepal_compliance/patches/: add_custom_fields.py  add_custom_fields_v1.py  custom_fields_patches.py  payroll_entry.py  update_income_tax_components.py
scripts/: compare_nepali_calendar_sources.py
(+169 files in other folders)
